--- a/.env.exemplo
+++ b/.env.exemplo
@@ -6,6 +6,8 @@ MODE=DEVELOPMENT  # DEVELOPMENT, PRODUCTION, MIGRATE
 DEBUG=True
 WEB_CONCURRENCY=4
 SECRET_KEY=django_insecure_gere_uma_chave_secreta
+# Supabase
+DATABASE_URL=postgresql://postgres.ijrwckdlnhvakbkpubzy:[YOUR-PASSWORD]@aws-0-sa-east-1.pooler.supabase.com:5432/postgres
 # DATABASE_URL=[database_url]
 CLOUDINARY_URL=cloudinary://your_api_key:your_api_secret@your_cloud_name
 PASSAGE_APP_ID=THE_APP_ID_PROVIDED_BY_PASSAGE
